syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.traiana.nagger.pb";

option (scalapb.options) = {
  package_name: "com.traiana.nagger.spb"
  collection_type: "List"
  flat_package: true
  single_file: true
};

package nagger;

message RegisterRequest {
    string username = 1;
    string password = 2;
    string nickname = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginRegisterResponse {
    oneof response {
        LoginSuccess success = 1;
        LoginFailure failure = 2;
    }
}

message LoginSuccess {
    string token = 1;
}

message LoginFailure {
    string message = 1;
}

message JoinLeaveRequest {
    string token = 1;
    string channel = 2;
    bool joinNotLeave = 3;
}

message MessageRequest {
    string token = 1;
    string channel = 2;
    string message = 3;
}

message ListenRequest {
    string token = 1;
}

message ListenEvent {
    string channel = 1;
    string nickname = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
}

service Nagger {
    rpc Register(RegisterRequest) returns (LoginRegisterResponse);
    rpc Login(LoginRequest) returns (LoginRegisterResponse);
    rpc JoinLeave(JoinLeaveRequest) returns (google.protobuf.Empty);
    rpc SendMessage(MessageRequest) returns (google.protobuf.Empty);
    rpc Listen(ListenRequest) returns (stream ListenEvent);
}
